@startuml
'https://plantuml.com/class-diagram

abstract class AbstractEnemy {
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + {abstract} generateProp() : List<BaseProp>
}


class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class ElitePlusEnemy {
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class BossEnemy {
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- ElitePlusEnemy
AbstractEnemy <|-- BossEnemy

abstract class EnemyFactory {
    + {abstract} createEnemy(): AbstractEnemy
}

class MobFactory {
    + createEnemy(): AbstractEnemy
}

class EliteFactory {
    + createEnemy(): AbstractEnemy
}

class ElitePlusFactory {
    + createEnemy(): AbstractEnemy
}

class BossFactory {
    + createEnemy(): AbstractEnemy
}

EnemyFactory <|.. MobFactory
EnemyFactory <|.. EliteFactory
EnemyFactory <|.. ElitePlusFactory
EnemyFactory <|.. BossFactory

MobFactory ..> MobEnemy
EliteFactory ..> EliteEnemy
ElitePlusFactory ..> ElitePlusEnemy
BossFactory ..> BossEnemy

@enduml